# near-eth-gateway

./: Cargo.toml  README.md
gateway/: Cargo.toml  build.sh
gateway/src/: ecrecover.rs  lib.rs  meta_parsing.rs  types.rs
gateway/tests/: test_general.rs
proxy/: Cargo.toml  build.sh
proxy/src/: lib.rs
res/: gateway.wasm  proxy.wasm
